--- a/src/components/Question/Question.scss
+++ b/src/components/Question/Question.scss
@@ -16,6 +16,7 @@
 
   p {
     margin: 40px;
+    white-space: pre-wrap;
   }
 
   .CrudBtnsContainer {
